# parade

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
parade/: __init__.py  __main__.py
parade/adapters/: __init__.py  exporters.py  formatters.py  parsers.py  readers.py
parade/application/: __init__.py  export.py  format.py  parse.py  read.py
parade/domain/: __init__.py  activity.py  project_network.py  scheduling.py
tests/: __init__.py  strategies.py  test_placeholder.py
tests/application/: conftest.py  test_export.py  test_format.py  test_integration.py  test_parse.py  test_read.py
tests/domain/: test_project_network.py  test_scheduling.py  test_scheduling_correctness.py  test_scheduling_simple.py  test_value_objects.py
